WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132263
[GTK][WK2] Missing return statement in webkit_plugin_get_description()
https://bugs.webkit.org/show_bug.cgi?id=132263
Summary
[GTK][WK2] Missing return statement in webkit_plugin_get_description()
Zan Dobersek
Reported
2014-04-28 04:36:23 PDT
[GTK][WK2] Missing return statement in webkit_plugin_get_description()
Attachments
Patch
(1.32 KB, patch)
2014-04-28 04:38 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2014-04-28 04:38:42 PDT
Created
attachment 230292
[details]
Patch
WebKit Commit Bot
Comment 2
2014-04-28 04:39:49 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2014-04-28 04:49:25 PDT
Comment on
attachment 230292
[details]
Patch Good catch, please add it to the 2.4 wiki as well.
Zan Dobersek
Comment 4
2014-04-28 07:25:04 PDT
Comment on
attachment 230292
[details]
Patch Clearing flags on attachment: 230292 Committed
r167884
: <
http://trac.webkit.org/changeset/167884
>
Zan Dobersek
Comment 5
2014-04-28 07:25:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug