[GTK][WK2] Missing return statement in webkit_plugin_get_description() https://bugs.webkit.org/show_bug.cgi?id=132263

Reviewed by Carlos Garcia Campos.

* UIProcess/API/gtk/WebKitPlugin.cpp:
(webkit_plugin_get_description): Actually return the data of the cached
plugin description CString.


Canonical link: https://commits.webkit.org/150293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167884 268f45cc-cd09-0410-ab3c-d52691b4dbfc